--- a/src/pretix/locale/tr/LC_MESSAGES/djangojs.po
+++ b/src/pretix/locale/tr/LC_MESSAGES/djangojs.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-07-08 13:49+0000\n"
-"PO-Revision-Date: 2018-07-18 07:33+0000\n"
+"PO-Revision-Date: 2018-07-18 22:00+0000\n"
 "Last-Translator: Yunus Fırat Pişkin <firat.piskin@idvlabs.com>\n"
 "Language-Team: Turkish <https://translate.pretix.eu/projects/pretix/"
 "pretix-js/tr/>\n"
@@ -32,12 +32,12 @@ msgstr "Yorum:"
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:9
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:33
 msgid "Placed orders"
-msgstr "Yerleştirilen siparişler"
+msgstr "Verilen siparişler"
 
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:9
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:33
 msgid "Paid orders"
-msgstr "Ödenmiş siparişler"
+msgstr "Ücretli siparişler"
 
 #: pretix/plugins/statistics/static/pretixplugins/statistics/statistics.js:21
 msgid "Total revenue"
