Translated on translate.pretix.eu (French)
Currently translated at 94.3% (2416 of 2563 strings)

Translation: pretix/pretix
Translate-URL: https://translate.pretix.eu/projects/pretix/pretix/fr/

powered by weblate

--- a/src/pretix/locale/fr/LC_MESSAGES/django.po
+++ b/src/pretix/locale/fr/LC_MESSAGES/django.po
@@ -4,8 +4,8 @@ msgstr ""
 "Project-Id-Version: 1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-07-08 13:49+0000\n"
-"PO-Revision-Date: 2018-07-13 06:00+0000\n"
-"Last-Translator: Claude <superoxyde@laposte.net>\n"
+"PO-Revision-Date: 2018-07-19 14:45+0000\n"
+"Last-Translator: Raphael Michel <michel@rami.io>\n"
 "Language-Team: French <https://translate.pretix.eu/projects/pretix/pretix/fr/"
 ">\n"
 "Language: fr\n"
@@ -3470,19 +3470,19 @@ msgid ""
 msgstr ""
 "Bonjour,\n"
 "\n"
-"nous avons reçu avec succès votre commande pour {event}1 avec une valeur "
+"nous avons reçu avec succès votre commande pour {event} avec une valeur "
 "totale.\n"
-"de {total_with_currency}2. Veuillez compléter votre paiement avant le "
-"{date}3.\n"
+"de {total_with_currency}. Veuillez compléter votre paiement avant le {date}."
 "\n"
-"{payment_info}4\n"
+"\n"
+"{payment_info}\n"
 "\n"
 "Vous pouvez modifier les détails de votre commande et consulter l'état de "
 "votre commande à l'adresse suivante\n"
-"{url}5\n"
+"{url}\n"
 "\n"
 "Meilleures salutations,\n"
-"Votre équipe {event}6"
+"Votre équipe {event}"
 
 #: pretix/base/settings.py:295
 #, python-brace-format
@@ -3552,17 +3552,17 @@ msgid ""
 msgstr ""
 "Bonjour,\n"
 "\n"
-"nous n'avons pas encore reçu le paiement de votre commande pour {event}1.\n"
+"nous n'avons pas encore reçu le paiement de votre commande pour {event}.\n"
 "Gardez à l'esprit que nous ne garantissons votre commande que si nous "
 "recevons\n"
-"votre paiement avant {expire_date}2.\n"
+"votre paiement avant {expire_date}.\n"
 "\n"
 "Vous pouvez consulter les informations de paiement et le statut de votre "
 "commande à l'adresse suivante\n"
-"{url}3\n"
+"{url}\n"
 "\n"
 "Meilleures salutations,\n"
-"Votre équipe {événement}4"
+"Votre équipe {event}"
 
 #: pretix/base/settings.py:339
 #, python-brace-format
