--- a/src/pretix/locale/ar/LC_MESSAGES/django.po
+++ b/src/pretix/locale/ar/LC_MESSAGES/django.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-07-08 13:49+0000\n"
-"PO-Revision-Date: 2018-03-17 21:10+0000\n"
-"Last-Translator: OMar <omelgazzar@gmail.com>\n"
+"PO-Revision-Date: 2018-07-23 23:00+0000\n"
+"Last-Translator: Muhammad Hewedy <mhewedy@gmail.com>\n"
 "Language-Team: Arabic <https://translate.pretix.eu/projects/pretix/pretix/ar/"
 ">\n"
 "Language: ar\n"
@@ -18,11 +18,11 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 "
 "&& n%100<=10 ? 3 : n%100>=11 ? 4 : 5;\n"
-"X-Generator: Weblate 2.19.1\n"
+"X-Generator: Weblate 3.0.1\n"
 
 #: pretix/api/models.py:18
 msgid "Application name"
-msgstr ""
+msgstr "إسم التطبيق"
 
 #: pretix/api/models.py:21
 msgid "Redirection URIs"
@@ -34,15 +34,15 @@ msgstr ""
 
 #: pretix/api/models.py:25 pretix/plugins/paypal/payment.py:58
 msgid "Client ID"
-msgstr ""
+msgstr "معرف الزبون"
 
 #: pretix/api/models.py:29
 msgid "Client secret"
-msgstr ""
+msgstr "كلمة سر الزبون"
 
 #: pretix/api/serializers/cart.py:55 pretix/api/serializers/order.py:444
 msgid "The product \"{}\" is not assigned to a quota."
-msgstr ""
+msgstr "التطبيق \"{}\" لا يوجد له كوتا."
 
 #: pretix/api/serializers/cart.py:63 pretix/api/serializers/order.py:456
 msgid ""
