--- a/src/pretix/locale/es/LC_MESSAGES/django.po
+++ b/src/pretix/locale/es/LC_MESSAGES/django.po
@@ -8,8 +8,8 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-07-08 13:49+0000\n"
-"PO-Revision-Date: 2018-07-08 14:06+0000\n"
-"Last-Translator: Raphael Michel <michel@rami.io>\n"
+"PO-Revision-Date: 2018-07-24 07:00+0000\n"
+"Last-Translator: TRIXHosting <admin@trix.hosting>\n"
 "Language-Team: Spanish <https://translate.pretix.eu/projects/pretix/pretix/"
 "es/>\n"
 "Language: es\n"
@@ -25,11 +25,11 @@ msgstr "Nombre de Aplicacion"
 
 #: pretix/api/models.py:21
 msgid "Redirection URIs"
-msgstr ""
+msgstr "URI de Redireccion"
 
 #: pretix/api/models.py:22
 msgid "Allowed URIs list, space separated"
-msgstr ""
+msgstr "Lista de URI permitida, separada por espacio"
 
 #: pretix/api/models.py:25 pretix/plugins/paypal/payment.py:58
 msgid "Client ID"
@@ -37,16 +37,18 @@ msgstr "ID Cliente"
 
 #: pretix/api/models.py:29
 msgid "Client secret"
-msgstr ""
+msgstr "Secreto del Cliente"
 
 #: pretix/api/serializers/cart.py:55 pretix/api/serializers/order.py:444
 msgid "The product \"{}\" is not assigned to a quota."
-msgstr ""
+msgstr "El producto \"{}\" no tiene asignada una cuota."
 
 #: pretix/api/serializers/cart.py:63 pretix/api/serializers/order.py:456
 msgid ""
 "There is not enough quota available on quota \"{}\" to perform the operation."
 msgstr ""
+"No hay suficiente cuota disponible en la cuota \"{}\" para realizar esta "
+"operacion."
 
 #: pretix/api/serializers/checkin.py:27 pretix/base/models/items.py:830
 #: pretix/base/models/items.py:1139
@@ -87,12 +89,16 @@ msgid ""
 "Updating add-ons or variations via PATCH/PUT is not supported. Please use "
 "the dedicated nested endpoint."
 msgstr ""
+"Actualizando los add-ons o variaciones por medio de PATCH/PUT no es "
+"soportado. Use un punto final dedicado vecino."
 
 #: pretix/api/serializers/item.py:171
 msgid ""
 "Updating options via PATCH/PUT is not supported. Please use the dedicated "
 "nested endpoint."
 msgstr ""
+"Actualizando las opciones por medio de PATCH/PUT no es soportado. Use un "
+"punto final dedicado vecino."
 
 #: pretix/api/views/oauth.py:74 pretix/control/logdisplay.py:200
 #, python-brace-format
@@ -100,8 +106,8 @@ msgid ""
 "The application \"{application_name}\" has been authorized to access your "
 "account."
 msgstr ""
-"la aplicacion \"{application_name}\" ha sido autorizada para acceder desde "
-"tu cuenta"
+"La aplicacion \"{application_name}\" ha sido autorizada para acceder a tu "
+"cuenta."
 
 #: pretix/base/exporters/answers.py:18
 msgid "Answers to file upload questions"
@@ -131,6 +137,8 @@ msgid ""
 "Only include invoices issued on or after this date. Note that the invoice "
 "date does not always correspond to the order or payment date."
 msgstr ""
+"Solo se incluyen las facturas emitidas en o antes de esta fecha. Note que la "
+"fecha de la factura no siempre corresponde a la fecha del pedido o del pago."
 
 #: pretix/base/exporters/invoices.py:72
 #: pretix/control/templates/pretixcontrol/events/index.html:66
